Fixed spacing when no location on player

--- a/resources/css/sass/pages/_player.scss
+++ b/resources/css/sass/pages/_player.scss
@@ -136,7 +136,11 @@
     .subtitle-spacer {
         margin-bottom: 0;
         height: 0;
-        margin-top: -20px;
+        margin-top: 20px;
+
+        @media only screen and (max-width: 1200px) {
+            margin-top: 50px;
+        }
     }
 
     >.rank {
